# liberg

./: .clang-format  .gitignore  ARENA.md  CMakeLists.txt  LICENSE  README.md  result.csv
example/: example.c  result.erg  result.erg.info
include/: arena.h  erg.h  erginfo.h  infofile.h  infofile_arena.h  infofile_arena_simd.h  infofile_arena_simd_opt.h  infofile_simd.h  infofile_simple.h  simple_parser.h  string_simd.h  thread_pool.h
scripts/: test_erg.py  test_infofile.py  visualize_csv.py
src/: arena.c  erg.c  erginfo.c  infofile.c  infofile_arena.c  infofile_arena_simd.c  infofile_arena_simd_opt.c  infofile_simd.c  infofile_simple.c  simple_parser.c  string_simd.c  thread_pool.c
test/: bench_infofile.c  test_arena.c  test_correctness.c  test_erg.c  test_erginfo.c  test_infofile.c  test_thread_pool.c
